Estructura de archivos

--- a/src/views/users/newUser.ejs
+++ b/src/views/users/newUser.ejs
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Estoy en create</h1>
+    <form action="/register" method="POST">
+        <input type="text" name= "nombre">
+        <button type="submit">enviar</button>
+    </form>
 </body>
 </html>
