Creación de usuarios

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/register" method="POST">
-        <input type="text" name= "nombre">
+    <form action="/profile" method="POST">
+       <input type="text" name="title"> 
+            
         <button type="submit">enviar</button>
     </form>
 </body>
