--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -4,7 +4,7 @@
 <body>
     
     <section class="form">
-        <form method="POST" action="/register" enctype="multipart/form-data" class="register">
+        <form method="POST" action="/register" class="register">
             <div class="control-formulario">
                 
                 <input 
