--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/da86db1aac.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/header-footer.css">
+    <link rel="stylesheet" href="/css/stylesheet.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
