--- a/public/css/styleSheet.css
+++ b/public/css/styleSheet.css
@@ -96,6 +96,10 @@
                 margin-right: 10px;
             }
 
+.form .div .text-danger{
+    color:red;
+}
+
 /*================== Register =======================*/
 .form{
     background-color: #b0d4e9;
@@ -170,6 +174,9 @@
     .is-invalid{
         border: red solid 1px;
     }
+
+
+
 
 /*================== Footer =======================*/
 .redes {
