--- a/src/views/products/createProducts.ejs
+++ b/src/views/products/createProducts.ejs
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include ('../partials/head') %>
 <body>
     <main class="main">
-        <h3>Creación de productos</h3>
-        <form action="/products" method="POST" class="form" enctype="multipart/form-data">
+        <h3>Nueva propiedad</h3>
+        <form action="/products" method="POST" > 
+            <!-- enctype="multipart/form-data" -->
             <div class="campo">
                 <label for="nombre">Nombre</label>
                 <input
@@ -48,14 +42,12 @@
                     </div>
                     <% } %>
             </div>
-            </div>
+
             <div class="campo">
                 <label for="categ">Categoría</label>
                 <select name="categ" class=<%=locals.errors && errors.categ ? 'is-invalid' : null %>>
                     <% categories.forEach(cat => {%>
-                        <option>
-                        <%= cat.category %>
-                        </option>
+                        <option value="<%= cat.id %>"><%= cat.category %></option>
                     <% }) %>
                 </select>
 
@@ -65,6 +57,7 @@
                     </div>
                     <% } %>
             </div>
+
             <div class="campo">
                 <label for="habit">Cantidad de Habitaciones</label>
                 <input 
@@ -112,9 +105,7 @@
                 <label for="destination">Ciudad</label>
                 <select name="destination" class=<%=locals.errors && errors.destination ? 'is-invalid' : null %>>
                     <% destination.forEach(dest => {%>
-                        <option>
-                        <%= dest.destination %>
-                        </option>
+                        <option value="<%= dest.id %>"><%= dest.destination %></option>
                     <% }) %>
                 </select>
 
@@ -185,15 +176,12 @@
 
             <button type="reset" class="button">Cancelar</button>
             <button type="submit" class="button">Confirmar</button>
-            <button  class="button">
-                <a href="/products">Volver</a>
-            </button>
+            <button  class="button"><a href="/products">Volver</a></button>
             
-
         </form>
-       
+
+
 
     </main>
 
 </body>
-</html>
