--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<%- include ('../partials/head') %>
 <body>
 
-<h2>  Bienvenido  </h2>
+<%- include ('../partials/header') %>
 
-<p> Formulario de login </p>
 
 <section class="form">
         <form method="POST" action="/users/login" class="register">
@@ -32,7 +32,7 @@
             </form>        
         </section>
 
-
+ <%- include ('../partials/footer') %>
 
 
 </body>
