--- a/public/css/styleSheet.css
+++ b/public/css/styleSheet.css
@@ -3,6 +3,10 @@
     font-family:Roboto;
 }
 
+section{
+    margin-top: 90px;
+}
+
 /*================== header =======================*/
 
 .main-header{
@@ -95,6 +99,7 @@
             .login{
                 margin-right: 10px;
             }
+
 
 /*================== Register =======================*/
 .form{
