--- a/public/css/styleSheet.css
+++ b/public/css/styleSheet.css
@@ -179,8 +179,51 @@ section{
         border: red solid 1px;
     }
 
+/*================== profile =======================*/         
+.containerProf{
+    margin-top: 100px;
+    display: flex;
+}
+    .containerProf img{
+        margin-left: 0;
+        width: 40%;
+    }
 
+    .info{
+        margin-left: 30px;
+    }
 
+        .info p, label{
+            font-family:Roboto;
+            font-size: 15px;
+            color: hsl(202, 61%, 50%);
+        }
+        .info ul{
+            font-family:Roboto;
+            font-size: 15px;
+            color: hsl(202, 61%, 50%);  
+        }
+
+        .info ul{
+            font-family:Roboto;
+            font-size: 15px;
+            color: hsl(202, 61%, 50%); 
+            padding: 0; 
+        }
+        .profile_button{
+            background-color:#1259c3;
+            border: none;
+            font-size: 15px;
+            color: #ffffff;
+            padding: 10px;
+            border-radius: 4px;
+            height: 35px;
+            margin: 2px;
+        }
+            .profile_button a{
+                text-decoration: none;
+                color: #ffffff;
+            }
 
 /*================== Footer =======================*/
 .redes {
