--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -33,8 +33,8 @@
             </a>
 
             <% if (locals.isLogged){ %>
-    
-                <img src="/img/users/<%= locals.userLogged.avatar %>" width="40" style="border-radius: 100%">
+
+                <img src="/img/users/<%= user? user.avatar : locals.userLogged.avatar %>" width="40" style="border-radius: 100%">
                 <nav class="accesos">
                     <a href="/profile">Perfil</a>
                     <a href="/Logout">Logout</a>
