--- a/src/views/users/editUser.ejs
+++ b/src/views/users/editUser.ejs
@@ -8,8 +8,8 @@
         <%- include ('../partials/header') %>
 
             <section class="form">
-                <form method="POST" action="/editUser?_method=PUT" enctype="multipart/form-data" class="register">
-                    <div class="control-formulario">
+                <form method='POST' action='/editUser?_method=PUT' class='register' enctype="multipart/form-data">
+                    <div class='control-formulario'>
 
                         <input type="text" name="first_name" 
                             class="control <%= locals.errors && errors.first_name ? 'is-invalid' : null %>"
@@ -65,15 +65,15 @@
 
                     <div class="intereses">
                         <label class="label">Intereses</label>
-                        <label class="check"><input type="checkbox" <%=user.casa==1 ? 'checked' : null
+                        <label class="check"><input type="checkbox" name="casa" value="1" <%=user.casa == 1 ? 'checked' : null
                                 %>>Casas</label>
-                        <label class="check"><input type="checkbox" <%=user.departamento==1 ? 'checked' : null
+                        <label class="check"><input type="checkbox" name="departamento" value="1" <%=user.departamento == 1 ? 'checked' : null
                                 %>>Departamentos</label>
-                        <label class="check"><input type="checkbox" <%=user.hotel=='1' ? 'checked' : null
+                        <label class="check"><input type="checkbox" name="hotel" value="1" <%=user.hotel == 1 ? 'checked' : null
                                 %>>Hoteles</label>
-                        <label class="check"><input type="checkbox" <%=user.hosteria=='1' ? 'checked' : null
+                        <label class="check"><input type="checkbox" name="hosteria" value="1" <%=user.hosteria == 1 ? 'checked' : null
                                 %>>Hosterías</label>
-                        <label class="check"><input type="checkbox" <%=user.aparts=='1' ? 'checked' : null %>>
+                        <label class="check"><input type="checkbox" value="1" <%=user.aparts == 1 ? 'checked' : null %>>
                             Aparts</label>
                     </div>
                     
