--- a/src/views/products/createProducts.ejs
+++ b/src/views/products/createProducts.ejs
@@ -5,45 +5,6 @@
         <form action="/products" method="POST" > 
             <!-- enctype="multipart/form-data" -->
             <div class="campo">
-                <label for="nombre">Nombre</label>
-                <input
-                    type="text" 
-                    name="nombre" 
-                    value="<%= locals.casa ? casa.nombre : null %>"
-                    class=<%=locals.errors && errors.nombre ? 'is-invalid' : null
-                    %>>
-                <% if (locals.errors && errors.nombre) { %>
-                    <div class="text-danger">
-                        <%= errors.nombre.msg %>
-                    </div>
-                    <% } %>
-            </div>
-            <div class="campo">
-                <label for="descrip">Descripción</label>
-                <input 
-                    type="text" 
-                    name="descrip" 
-                    value="<%= locals.casa ? casa.descrip : null %>"
-                    class=<%=locals.errors && errors.descrip ? 'is-invalid' :
-                    null %>></input>
-                <% if (locals.errors && errors.descrip) { %>
-                    <div class="text-danger">
-                        <%= errors.descrip.msg %>
-                    </div>
-                    <% } %>
-            </div>
-            <div class="campo">
-                <label for="image">Imagen</label>
-                <input type="file" name="image">
-                <input type="hidden" name="oldImage" value="<%= locals.casa ? casa.image : '0' %>">
-                <% if (locals.errors && errors.image) { %>
-                    <div class="text-danger">
-                        <%= errors.image.msg %>
-                    </div>
-                    <% } %>
-            </div>
-
-            <div class="campo">
                 <label for="categ">Categoría</label>
                 <select name="categ" class=<%=locals.errors && errors.categ ? 'is-invalid' : null %>>
                     <% categories.forEach(cat => {%>
@@ -59,19 +20,32 @@
             </div>
 
             <div class="campo">
-                <label for="habit">Cantidad de Habitaciones</label>
-                <input 
-                    type="number" 
-                    name="habit" 
-                    value="<%= locals.casa ? casa.habit : null %>"
-                    class="habit <%= locals.errors &&
-                    errors.habit ? 'is-invalid' : null %>">
-                <% if (locals.errors && errors.habit) { %>
+                <label for="image">Imagen</label>
+                <input type="file" name="image">
+                <input type="hidden" name="oldImage" value="<%= locals.casa ? casa.image : '0' %>">
+                <% if (locals.errors && errors.image) { %>
                     <div class="text-danger">
-                        <%= errors.habit.msg %>
+                        <%= errors.image.msg %>
                     </div>
                     <% } %>
             </div>
+
+
+            <div class="campo">
+                <label for="n_people">Nro de personas</label>
+                <input 
+                    type="number" 
+                    name="n_people" 
+                    value="<%= locals.casa ? casa.n_people : null %>"
+                    class="n_people <%= locals.errors &&
+                    errors.n_people ? 'is-invalid' : null %>">
+                <% if (locals.errors && errors.n_people) { %>
+                    <div class="text-danger">
+                        <%= errors.n_people.msg %>
+                    </div>
+                    <% } %>
+            </div>
+
             <div class="campo">
                 <label for="price">Precio</label>
                 <input 
@@ -86,21 +60,23 @@
                     </div>
                     <% } %>
             </div>
+
             <div class="campo">
-                <label for="location">Ubicacion</label>
+                <label for="location">Dirección</label>
                 <input 
                     type="text" 
-                    name="ubicacion" 
-                    value="<%= locals.casa ? casa.ubicacion : null %>"
-                    class=<%=locals.errors && errors.ubicacion ? 'is-invalid' :
+                    name="address" 
+                    value="<%= locals.casa ? casa.address : null %>"
+                    class=<%=locals.errors && errors.address ? 'is-invalid' :
                     null %>>
 
-                    <% if (locals.errors && errors.ubicacion) { %>
+                    <% if (locals.errors && errors.address) { %>
                         <div class="text-danger">
-                            <%= errors.ubicacion.msg %>
+                            <%= errors.address.msg %>
                         </div>
                     <% } %>
             </div>
+
             <div class="campo">
                 <label for="destination">Ciudad</label>
                 <select name="destination" class=<%=locals.errors && errors.destination ? 'is-invalid' : null %>>
@@ -115,19 +91,8 @@
                     </div>
                 <% } %>
             </div>
-            <div class="campo">
-                <label for="condiciones">Condiciones</label>
-                <input
-                    name="condiciones" 
-                    value="<%= locals.casa ? casa.condiciones : null %>"
-                    class=<%=locals.errors && errors.condiciones
-                    ? 'is-invalid' : null %>></input>
-                <% if (locals.errors && errors.condiciones) { %>
-                    <div class="text-danger">
-                        <%= errors.condiciones.msg %>
-                    </div>
-                    <% } %>
-            </div>
+
+
             <div class="campo">
                 <label for="servicios">Servicios</label> <br>
                 <input 
@@ -157,21 +122,6 @@
                     value="parrilla"
                     <%= locals.casa && casa.servicios && casa.servicios.includes("parrilla") ? 'checked' : null %>>
                 <label for="servicios">Parrilla</label>
-                <br>
-                <input 
-                    type="checkbox" 
-                    name="servicios" 
-                    value="aireacondicionado"
-                    <%= locals.casa && casa.servicios && casa.servicios.includes("aireacondicionado") ? 'checked' : null %>>
-                <label for="servicios">Aire acondicionado</label>
-                <% if (locals.errors && errors.servicios) { %>
-                    <div class="text-danger">
-                        <%= errors.servicios.msg %>
-                    </div>
-                    <% } %>
-                        <br>
-
-
             </div>
 
             <button type="reset" class="button">Cancelar</button>
