--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -9,7 +9,7 @@
             <section>
                 <div class="containerProf">
                     <img src="/img/users/<%=user.avatar%>">
-
+<p>"/img/users/<%=user.avatar%>"</p>
                     <div class="info">
                         <p><%= user.first_name + " " + user.last_name %></p>
                         <p>
