--- a/src/views/partials/product.ejs
+++ b/src/views/partials/product.ejs
@@ -7,30 +7,29 @@
                     <h3>
                         Dirección: <%= casa.address %>
                     </h3>
-                    <img src="/images/products/<%= casa.image %>" alt="" class="listProductsImage">
+                    <img src="/img/products/<%= casa.image.image_name %>" alt="" class="listProductsImage">
                     <p>
                         Cantidad máxima de personas: <%= casa.n_of_people %>
                     </p>
                     <div class="campo">
                         <label>Servicios</label> <br>
-                        <input class="check" type="checkbox" name="wifi" <%= locals.casa && casa.wifi == 1 ? 'checked' : null %>>
-                        <label>Wi-fi</label>
+                        <label class="check"><input type="checkbox" name="wifi" <%= locals.casa && casa.wifi == 1 ? 'checked' : null %>>
+                        Wi-fi</label>
                         <br>
-                        <input class="check" type="checkbox" name="pool" <%= locals.casa && casa.pool == 1 ? 'checked' : null %>>
-                        <label>Pileta</label>
+                        <label class="check"><input type="checkbox" name="pool" <%= locals.casa && casa.pool == 1 ? 'checked' : null %>>
+                        Pileta</label>
                         <br>
-                        <input class="check" type="checkbox" name="parking"
-                            <%= locals.casa && casa.parking == 1 ? 'checked' : null %>>
-                        <label>Estacionamiento</label>
+                        <label class="check"><input type="checkbox" name="parking"
+                            <%= locals.casa && casa.parking == 1 ? 'checked' : null %>>Estacionamiento</label>
                         <br>
-                        <input class="check" type="checkbox" name="barbecue"
+                        <label class="check"><input type="checkbox" name="barbecue"
                             <%= locals.casa && casa.barbecue ? 'checked' : null %>>
-                        <label>Parrilla</label>
+                        Parrilla</label>
                     </div>
                     <h5>Precio por noche: $<%= new Intl.NumberFormat('de-DE', { style: 'decimal' }).format(casa.price) %>
                     </h5>
 
-                    <script src="detalleCrud.ejs"></script>
+                    <script src="/js/detalleCrud.js"></script>
                 </section>
             </main>
             
