detalle de producto y botones en profile

--- a/src/views/partials/product.ejs
+++ b/src/views/partials/product.ejs
@@ -7,8 +7,9 @@
                     <h3>
                         Dirección: <%= casa.address %>
                     </h3>
-                    <p><%= casa.image.id %></p>
-                    <img src="/img/products/<%= casa.image.image_name %>" alt="" class="listProductsImage">
+                    <% casa.image.forEach(image =>{ %>
+                    <img src="/img/products/<%= image.image_name %>" alt="" class="listProductsImage">
+                    <% }) %>
                     <p>
                         Cantidad máxima de personas: <%= casa.n_of_people %>
                     </p>
