--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -35,6 +35,12 @@
                         <button class="profile_button">
                             <a href="/editUser"> Editar</a>
                         </button>
+                        <button class="profile_button">
+                            <a href="/products/create"> Publicar</a>
+                        </button>
+                        <button class="profile_button">
+                            <a href=""> Publicaciones</a>
+                        </button>
 
                     </div>
 
