--- a/src/views/products/createProducts.ejs
+++ b/src/views/products/createProducts.ejs
@@ -1,6 +1,7 @@
 <%- include ('../partials/head') %>
 <body>
 
+    <%- include ('../partials/header') %>
 
     <main class="main">
         <h3>Nueva propiedad</h3>
